# cPlusPlus

./: .gitignore
lab1/derivative_calculator/tests/: CMakeLists.txt  gtest_derivative.cpp
lab2/: CMakeLists.txt
lab2/derivative_calculator/: CMakeLists.txt
lab2/derivative_calculator/include/: derivative.h
lab2/derivative_calculator/src/: CMakeLists.txt  derivative.cpp  main.cpp
lab2/derivative_calculator/tests/: CMakeLists.txt  test_derivative.cpp
lab2/include/: iomanip.hpp
lab2/tests/: iomanip.cpp
